--- a/CarRentalManagement/Client/CarRentalManagement.Client.csproj
+++ b/CarRentalManagement/Client/CarRentalManagement.Client.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Pages\Makes\Index.razor" />
+    <None Include="Pages\Models\Index.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.12" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.12" />
@@ -19,13 +24,6 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\Colours\" />
-    <Folder Include="Pages\Customers\" />
-    <Folder Include="Pages\Makes\" />
-    <Folder Include="Pages\Vehicles\" />
   </ItemGroup>
 
 </Project>
